Bug Report / Feature Request

--- a/dispatchcommander/index.html
+++ b/dispatchcommander/index.html
@@ -213,6 +213,21 @@
           before launch.*
         </p>
       </div>
+
+      <!-- Feedback buttons -->
+<div class="flex flex-wrap gap-4 justify-center mt-12">
+  <a
+    href="https://github.com/jobee-dev/jobee-dev.github.io/issues/new?labels=bug&template=bug_report.md"
+    class="button"
+    >Report a Bug</a
+  >
+  <a
+    href="https://github.com/jobee-dev/jobee-dev.github.io/issues/new?labels=enhancement&template=feature_request.md"
+    class="button"
+    >Suggest a Feature</a
+  >
+</div>
+
     </section>
 
     <!-- ====================================== -->
