Add Support page & link

--- a/index.html
+++ b/index.html
@@ -88,7 +88,11 @@
     </p>
     <div class="flex flex-col sm:flex-row gap-4">
       <a href="/dispatchcommander/index.html" class="button">Launch Dispatch Commander</a>
-      <a href="#about" class="button">Learn About Us</a>
+    </div>
+    <br>
+    <div> 
+        <a href="#about" class="button">Learn About Us</a>
+      <a href="/support.html" class="button">Support</a>
     </div>
   </header>
 
