--- a/support.html
+++ b/support.html
@@ -99,11 +99,83 @@
       text-decoration: underline;
       text-underline-offset: 2px;
     }
+
+    /* Navigation Styles */
+    .nav-header {
+      background: rgba(0,0,0,0.9);
+      border-bottom: 1px solid rgba(255,255,255,0.08);
+      backdrop-filter: blur(10px);
+    }
+    .nav-link {
+      color: var(--fg);
+      text-decoration: none;
+      padding: 0.5rem 1rem;
+      border-radius: 0.25rem;
+      transition: all 0.3s;
+      font-family: "IBM Plex Mono", monospace;
+      font-size: 0.875rem;
+      text-transform: uppercase;
+      letter-spacing: 0.05em;
+    }
+    .nav-link:hover {
+      color: var(--accent);
+      background: var(--accent-soft);
+    }
+    .nav-link.active {
+      color: var(--accent);
+      background: var(--accent-soft);
+    }
+    .mobile-menu {
+      display: none;
+    }
+    .mobile-menu.active {
+      display: block;
+    }
+    @media (max-width: 768px) {
+      .desktop-nav { display: none; }
+      .mobile-nav { display: block; }
+    }
+    @media (min-width: 769px) {
+      .desktop-nav { display: flex; }
+      .mobile-nav { display: none; }
+    }
   </style>
 </head>
 <body>
+  <!-- Grid background overlay -->
   <div class="grid-overlay"></div>
-  <div class="py-16 px-6">
+
+  <!-- Navigation Header -->
+  <nav class="nav-header fixed top-0 left-0 right-0 z-50">
+    <div class="max-w-6xl mx-auto px-6 py-4">
+      <div class="flex items-center justify-between">
+        <!-- Logo -->
+        <a href="/" class="text-xl font-bold glow code">JOBEE.DEV</a>
+
+        <!-- Desktop Navigation -->
+        <div class="desktop-nav items-center space-x-4">
+          <a href="/" class="nav-link">Home</a>
+          <a href="/dispatchcommander/index.html" class="nav-link">Dispatch Commander</a>
+          <a href="/support.html" class="nav-link active">Support</a>
+        </div>
+
+        <!-- Mobile Menu Button -->
+        <button class="mobile-nav text-2xl glow" onclick="toggleMobileMenu()">
+          <span class="material-icons">menu</span>
+        </button>
+      </div>
+      <!-- Mobile Navigation -->
+      <div id="mobile-menu" class="mobile-menu mt-4 pb-4 border-t border-gray-800">
+        <div class="flex flex-col space-y-2 pt-4">
+          <a href="/" class="nav-link">Home</a>
+          <a href="/dispatchcommander/index.html" class="nav-link">Dispatch Commander</a>
+          <a href="/support.html" class="nav-link active">Support</a>
+        </div>
+      </div>
+    </div>
+  </nav>
+
+  <div class="py-16 px-6 pt-32">
     <h1 class="text-4xl sm:text-5xl font-extrabold glow text-center mb-8">Support & Contact</h1>
     <div class="panel">
       <div class="flex flex-col items-center mb-6">
@@ -132,5 +204,21 @@
       </form>
     </div>
   </div>
+
+  <script>
+    // Mobile menu toggle
+    function toggleMobileMenu() {
+      const menu = document.getElementById('mobile-menu');
+      menu.classList.toggle('active');
+    }
+    // Close mobile menu when clicking outside
+    document.addEventListener('click', function(event) {
+      const mobileNav = document.querySelector('.mobile-nav');
+      const mobileMenu = document.getElementById('mobile-menu');
+      if (!mobileNav.contains(event.target) && !mobileMenu.contains(event.target)) {
+        mobileMenu.classList.remove('active');
+      }
+    });
+  </script>
 </body>
 </html>
